--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
   "name": "Ripple.js",
-  "author": "Jacob Kelley",
   "version": "1.2.1",
+  "description": "",
+  "main": "dist/ripple.js",
+  "style": "dist/ripple.css",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jakiestfu/Ripple.js.git"
+    "url": "git+https://github.com/DPOLocalBryceJ/Ripple.js.git"
   },
-  "scripts": {
-    "bower": "./node_modules/bower/bin/bower install",
-    "build": "./node_modules/grunt-cli/bin/grunt",
-    "build-watch": "./node_modules/grunt-cli/bin/grunt develop"
+  "dependencies": {
+    "jquery": "~2.1.3"
   },
   "devDependencies": {
-    "bower": "*",
-    "grunt": "~0.4.1",
-    "grunt-cli": "~0.1.9",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-cssmin": "0.10.0",
-    "grunt-contrib-jshint": "0.8.0",
-    "grunt-contrib-uglify": "0.2.5",
-    "grunt-contrib-watch": "~0.5.3"
+    "cross-env": "^5.1.4",
+    "laravel-mix": "^2.1.11"
+  },
+  "keywords": [
+    "material",
+    "ripple",
+    "animation"
+  ],
+  "author": "Jacob Kelley <jakie8@gmail.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DPOLocalBryceJ/Ripple.js/issues"
+  },
+  "homepage": "https://github.com/DPOLocalBryceJ/Ripple.js#readme",
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   }
 }
