--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "git+https://github.com/DPOLocalBryceJ/Ripple.js.git"
   },
   "dependencies": {
-    "jquery": "~2.1.3"
+    "jquery": ">=2.1.3"
   },
   "devDependencies": {
     "cross-env": "^5.1.4",
